# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: linter_and_tests.yml
gendiff/: constants.py  formatters.py  gendiff.py  parser.py
gendiff/format/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_parser.py
tests/fixtures/: build_diff.txt  expected2.txt  expected_json.txt  expected_plain.txt  file3.json  file3.yaml
