[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Artem Marhaza <artemmrgz@gmail.com>"]
packages = [ {include = "gendiff"}, ]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
