[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = ""
authors = ["Artem Marhaza <artemmrgz@gmail.com>"]
packages = [ {include = "gendiff"}, ]

[tool.poetry.dependencies]
python = "^3.8"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
